# assuming

./: LICENSE  README.md  setup.cfg
src/: assuming.py
src/assuming/: assuming.py
