[metadata]
name = assuming
version = 0.0.1
author = Peter Matthews
author_email = peter@pjmatthews.dev
description = An easy way to enforce assumptions about function parameters.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peterjamesmatthews/assuming
project_urls =
    Bug Tracker = https://github.com/peterjamesmatthews/assuming/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src